<resources>
    <string name="app_name">Atrack</string>
    <string name="sign_in">SIGN IN</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">SignUp</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>